fix jtreg run statements