@@ -30,14 +30,37 @@
  * @build jdk.test.whitebox.WhiteBox
  *        compiler.vectorization.runner.VectorizationTestRunner
  *
+ * @requires vm.compiler2.enabled
+ *
  * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
  *
  * @run main/othervm -Xbootclasspath/a:.
  *                   -XX:+UnlockDiagnosticVMOptions
  *                   -XX:+WhiteBoxAPI
+ *                   -XX:+UnlockExperimentalVMOptions -XX:-UseCompactObjectHeaders
+ *                   -XX:-AlignVector
  *                   compiler.vectorization.runner.LoopCombinedOpTest
  *
- * @requires vm.compiler2.enabled
+ * @run main/othervm -Xbootclasspath/a:.
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:+WhiteBoxAPI
+ *                   -XX:+UnlockExperimentalVMOptions -XX:-UseCompactObjectHeaders
+ *                   -XX:+AlignVector
+ *                   compiler.vectorization.runner.LoopCombinedOpTest
+ *
+ * @run main/othervm -Xbootclasspath/a:.
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:+WhiteBoxAPI
+ *                   -XX:+UnlockExperimentalVMOptions -XX:+UseCompactObjectHeaders
+ *                   -XX:-AlignVector
+ *                   compiler.vectorization.runner.LoopCombinedOpTest
+ *
+ * @run main/othervm -Xbootclasspath/a:.
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:+WhiteBoxAPI
+ *                   -XX:+UnlockExperimentalVMOptions -XX:+UseCompactObjectHeaders
+ *                   -XX:+AlignVector
+ *                   compiler.vectorization.runner.LoopCombinedOpTest
  */
 
 package compiler.vectorization.runner;
